[package]
description = "A rust crate to parse the World Checklist of Vascular Plants"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "wcvp"
repository = "https://github.com/callym/wcvp-rs"
version = "0.4.0"

[dependencies]
calamine = "0.32"
csv = "1.4"
reqwest = "0.13"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
time = { version = "0.3", features = ["macros", "parsing"] }
tokio = { version = "1.49", features = ["fs"] }
zip = { version = "7.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tokio = { version = "1.49", features = ["full"] }
